# Data-Visulizer

./: CMakeLists.txt  README.md  compile_commands.json
include/: App.hpp  ComputeUnit  H5.hpp  H5Group.hpp
include/compute_units/: Average.hpp  ComputeUnit.hpp
lib/: CMakeLists.txt
lib/include/: compute.hpp
lib/src/: compute.cpp
src/: App.cpp  ComputeUnit  H5.cpp  H5Group.cpp  main.cpp
src/compute_units/: Average.cpp
testing/: a.out  lab.c
